dnl Configuration for GGZ-KDE-Games
dnl ===============================

AC_INIT(configure.in)
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM
AM_INIT_AUTOMAKE(ggz-kde-games, 0.0.6)
AM_CONFIG_HEADER(config.h)

dnl Check for Qt and KDE
dnl ====================

KDE_SET_PREFIX
KDE_USE_QT(3)
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
AM_PROG_LIBTOOL
AC_PATH_KDE

dnl KDE-what-have-I-done
dnl ====================

KDE_PLUGIN="-avoid-version -module -no-undefined \$(KDE_RPATH) \$(KDE_MT_LDFLAGS)"
AC_SUBST(KDE_PLUGIN)

dnl Check for GGZ requirements
dnl ==========================

AC_GGZ_INIT(defaults)
AC_GGZ_INTL
AC_GGZ_LIBGGZ
AC_GGZ_GGZMOD
AC_GGZ_CONFIG

dnl Be a bit more strict
dnl ====================

CXXFLAGS="$CXXFLAGS -DKDE_NO_COMPAT -DQT_NO_COMPAT"
AC_SUBST(CXXFLAGS)

dnl Create Makefiles
dnl ================

AC_OUTPUT(Makefile
	KReversi/Makefile
	KReversi/module.dsc
	KReversi/pixmaps/Makefile
	krosswater/Makefile
	krosswater/module.dsc
	krosswater/zoneclient/Makefile
	krosswater/gfx/Makefile
	kdots/Makefile
	kdots/module.dsc
	kdots/Dot/Makefile
	ktictactux/Makefile
	ktictactux/module.dsc
	ktictactux/themes/Makefile
	koenig/Makefile
	koenig/module.dsc
	koenig/libcgc/Makefile
	koenig/pics/Makefile
	muehle/Makefile
	muehle/module.dsc
	muehle/src/Makefile
	muehle/src/ai/Makefile
	muehle/src/ggzwrap/Makefile
	muehle/pics/Makefile
	muehle/pics/standard/Makefile
	muehle/pics/alt/Makefile
	muehle/variants/Makefile
	muehle/doc/Makefile
	keepalive/Makefile
	keepalive/module.dsc
	keepalive/src/Makefile
	keepalive/pics/Makefile
	man/Makefile
	po/Makefile
	po/KReversi/Makefile
	po/ktictactux/Makefile
	po/kdots/Makefile
	po/krosswater/Makefile
	po/muehle/Makefile
	po/koenig/Makefile
	lib/Makefile
	lib/test/Makefile)

dnl Report success
dnl ==============

echo ""
echo "GGZ-KDE-Games is now configured. Please type 'make' in order to compile it."
echo "The following installation layout is used:"
echo ""
echo "Generic installation prefix: $prefix (for libraries etc.)"
echo "Game executable directory: $ggzexecmoddir"
echo "Game data directory: $ggzdatadir"
echo ""

